Enhance frontend theme management by updating index.html to support dynamic theme switching, adding CSS variables for light and dark themes in index.css, and integrating a ThemeToggle component in the header for user preference. Adjusted layout styles for improved responsiveness.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" class="dark">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -8,7 +8,20 @@
     <title>PaaSDeploy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <script>
+      (function () {
+        const theme = localStorage.getItem("theme") || "system";
+        const isDark =
+          theme === "dark" ||
+          (theme === "system" &&
+            window.matchMedia("(prefers-color-scheme: dark)").matches);
+        document.documentElement.classList.add(isDark ? "dark" : "light");
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
